<resources>
    <string name="app_name">গ্রন্থমঙ্গল</string>
    <string name="stay_logged_in">Stay Logged In</string>
    <string name="type_book_details">অনুগ্রহপূর্বক বইয়ের বিস্তারিত তথ্য প্রদান করুন</string>
    <string name="book_name">বইয়ের নাম</string>
    <string name="writer_name">লেখকের নাম</string>
    <string name="language">ভাষা:</string>
    <string name="bangla">বাংলা</string>
    <string name="bforb_efore">(বাংলা বই হলে বাংলায়, ইংরেজি বই হলে ইংরেজিতে লিখতে অনুরোধ করা যাচ্ছে)</string>
    <string name="comment">মন্তব্য (ঐচ্ছিক)</string>
    <string name="comment_neat">মন্তব্য</string>
    <string name="recipientsName">প্রাপকের নাম</string>
    <string name="address">ঠিকানা</string>
    <string name="phoneNumber">ফোন নাম্বার</string>
    <string name="price">মূল্য</string>
    <string name="place_an_order">বই অর্ডার করুন</string>
    <string name="delivery_address">প্রাপকের ঠিকানা</string>
    <string name="number_of_books">বইয়ের সংখ্যা</string>
    <string name="total_price">মোট মূল্য</string>
    <string name="add_more_book">আরও যোগ করুন</string>
    <string name="connectionErrorMessageBackendless">Unable to resolve host \"api.backendless.com\": No address associated with hostname</string>
    <string name="connectionErrorMessageVolley">java.net.UnknownHostException: Unable to resolve host \"backendlessappcontent.com\": No address associated with hostname</string>
    <string name="activityIDName">activityID</string>
    <string name="orderedBookList">orderedBookList</string>
    <string name="newlySelectedBook">newlySelectedBook</string>
    <string name="add_atleast_one_book">অর্ডার করতে অন্তত একটি বই যোগ করুন</string>
    <string name="posting_your_offer">অর্ডার সম্পন্ন করা হচ্ছে...</string>
    <string name="please_wait">অপেক্ষা করুন...</string>
    <string name="name">নাম</string>
    <string name="bkash">বিকাশ</string>
    <string name="confirm_payment_bkash">পেমেন্ট বিকাশ করার পরে Orders এ গিয়ে বিকাশ ট্রানজেকশন আইডি প্রদান করে আপনার পেমেন্ট কনফার্ম করুন</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>