<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".placeOrder">

    <ScrollView
        android:id="@+id/svPostOffer_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <include
                android:id="@+id/toolbar_PlaceOrder"
                layout="@layout/toolbar" />

            <TextView
                android:id="@+id/tvOrderDetails_OrderId"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="22dp"
                android:textStyle="bold"
                android:text="@string/place_an_order"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrderDetails_BookList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                android:hint="@string/recipientsName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrderDetails_RecipientName"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                android:hint="@string/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrderDetails_PhoneNumber"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:inputType="phone"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrderDetails_Address"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textPostalAddress"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                android:hint="@string/total_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrderDetails_TotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginLeft="20dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                android:hint="@string/comment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrderDetails_Comment"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textLongMessage"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:boxCornerRadiusBottomEnd="40dp"
                app:boxCornerRadiusBottomStart="40dp"
                app:boxCornerRadiusTopEnd="40dp"
                app:boxCornerRadiusTopStart="40dp"
                app:boxStrokeWidth="0dp"
                android:hint="bKash TxnID">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrderDetails_BkashTxnId"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOrderDetails_SubmitBkash"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_height="wrap_content"
                app:rippleColor="@color/colorPrimaryDark"
                app:cornerRadius="90dp"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="4dp"
                app:backgroundTint="@color/colorPrimary"
                android:text="Submit bKash TxnId"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
